<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">

        <!-- Overview category -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Label -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a1t" />
            <!-- Name field -->
            <EditText
                android:id="@+id/add1"
                style="@style/EditorFieldStyle"
                android:hint="@string/a1e"
                android:inputType="textCapWords" />
            <!-- Label -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2t" />
            <!-- Name field -->
            <EditText
                android:id="@+id/add2"
                style="@style/EditorFieldStyle"
                android:hint="@string/a2e"
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical">
                    <!-- Label -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pt" />
                    <!-- Name field -->
                    <EditText
                        android:id="@+id/pincode"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/pe"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical">
                    <!-- Label -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ct" />
                    <!-- Name field -->
                    <EditText
                        android:id="@+id/city"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/ce"
                        android:inputType="textCapWords" />
                </LinearLayout>

            </LinearLayout>
            <!-- Label -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lt" />
            <!-- Name field -->
            <EditText
                android:id="@+id/add3"
                style="@style/EditorFieldStyle"
                android:hint="@string/le"
                android:inputType="textCapWords" />

            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nickname for address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="HOME" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="WORK" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="OTHER" />
            </LinearLayout>-->
        </LinearLayout>

        <Button

            android:layout_gravity="end"
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>